--- a/Math-Ma-MSTAT/mstat_vorlesung_main.tex
+++ b/Math-Ma-MSTAT/mstat_vorlesung_main.tex
@@ -470,7 +470,10 @@
 \renewcommand{\S}{\mathcal{S}}
 \renewcommand{\G}{\mathcal{G}}
 \renewcommand{\L}{\mathcal{L}}
+\renewcommand{\F}{\mathcal{F}}
 \newcommand{\ntoinf}{\overset{n \to \infty}{\longrightarrow}}
+\newcommand{\satzende}{\enskip \text{.}}
+\newcommand{\komma}{\enskip \text{,}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -495,6 +498,9 @@
 	\input{mstat_3_3_stochastischeKonvergenz}
 	\input{mstat_3_4_konvergenzInProduktraeumen}
 	\input{mstat_3_5_gleichheitInVerteilung}
+	
+	\chapter{Verteilungskonvergenz von Zufallsvariablen in metrischen Räumen}
+	\input{mstat_4_0_verteilungskonvergenz}
 	
     \vfill \hfill $\blacksquare$
     
