--- a/Math-Ma-MSTAT/mstat_4_1_portmanteau.tex
+++ b/Math-Ma-MSTAT/mstat_4_1_portmanteau.tex
@@ -31,7 +31,7 @@ Der folgende Satz gibt eine äquivalente Charakterisierung von $\weakto$ bzw.\ $
 
 \input{mstat_4_1_portmanteau-satz}
 
-Falls $\mathcal{U} = \menge{B \in \B(S) : P(\rand{B}) = 0}$, so besagt \cref{satz: 4.2} in \cref{it: 4.2BorelSets}, dass $P_n(B) \to P(B)$ für alle $B \in \mathcal{U}$, also punktweise Konvergenz auf der Klasse $\mathcal{U}$, die schwache Konvergenz $P_n \weakto P$ nach sich zieht.
+Falls $\mathcal{U} = \menge{B \in \B(S) : P(\rand{B}) = 0}$, so besagt \cref{satz: 4.2} in \cref{it:4.2BorelSets}, dass $P_n(B) \to P(B)$ für alle $B \in \mathcal{U}$, also punktweise Konvergenz auf der Klasse $\mathcal{U}$, die schwache Konvergenz $P_n \weakto P$ nach sich zieht.
 Es gibt weitere solcher Klassen.
 % Der letzte Absatz ersetzt folgenden alten Satz:
 % Mitunter folgt schwache Konvergenz aus $\P_n(A)\ntoinf  \P(A)$ für eine spezielle Klasse von Mengen $A$.
@@ -66,7 +66,7 @@ Es gibt weitere solcher Klassen.
 		\end{aligned}
 	\end{equation*}
 	Mit $\epsilon \to 0$ folgt daraus $\liminf_{n \to \infty} P_n(G)\ge P(G)$.
-	Da $G \in \G$ beliebig war, folgt nun die Behauptung aus dem Theorem \cref{satz: 4.2} \ref{it:4.2OpenSets}.
+	Da $G \in \G$ beliebig war, folgt nun die Behauptung aus \cref{satz: 4.2} \ref{it:4.2OpenSets}.
 \end{proof}
 
 \begin{korollar} \label{korollar4.4}
