--- a/Math-Ma-MSTAT/mstat_vorlesung_main.tex
+++ b/Math-Ma-MSTAT/mstat_vorlesung_main.tex
@@ -479,6 +479,15 @@
 
 \begin{document}
     \makeTUtitle
+    
+    ~ \vfill
+    \begin{center}
+    	\fosfamily \itshape
+    	Dieses Skript basiert auf den Mitschriften von Willi Sontopski und Felix Hilsky aus den vorherigen Semestern sowie den Bemerkungen und Korrekturen von Prof. Ferger im Wintersemester 2020/21. 
+    \end{center}
+	\vfill
+	
+	\pagebreak
 
     \tableofcontents
 
@@ -500,9 +509,13 @@
 	\input{mstat_3_5_gleichheitInVerteilung}
 	
 	\chapter{Verteilungskonvergenz von Zufallsvariablen in metrischen Räumen}
-	\input{mstat_4_0_verteilungskonvergenz}
+	\input{mstat_4_1_portmanteau}
 	
     \vfill \hfill $\blacksquare$
+    
+    \appendix
+    \chapter{Grundlagen}
+    \input{mstat_anhang}
     
     \nocite{*} % erstellt Literaturverzeichnus ohne Verweise
    	\bibliographystyle{abbrvdin}
