--- a/Math-Ma-MSTAT/mstat_4_1_portmanteau-satz.tex
+++ b/Math-Ma-MSTAT/mstat_4_1_portmanteau-satz.tex
@@ -52,206 +52,176 @@
 			= P(G) 
 			\satzende
 		\end{equation*}
+		%
+		\item[\ref{it:4.2ClosedSets} $\Rightarrow$ \ref{it:4.2weakConv}:] Sei $f \in C^b(\S)$ beliebig. Wir zeigen zunächst, dass
+		\begin{equation}\label{eqProof1.4.2Sternchen}
+			\limsup_{n \to \infty} \int f \diffskip P_n \le \int f \diffskip P
+		\end{equation}
+		\begin{description}
+			\item[Schritt 1:] Sei $0 \le f < 1$. Setze $F_i \defeq \menge{ f \ge \frac{i}{k} } = \menge{ x \in \S : f(x) \ge \frac{i}{k} } = f^{-1}([\frac{i}{k}, \infty))$ für alle $0 \le i \le k$ und $k \in \N$.
+			Dann gilt $F_i \in \F$ für alle zulässigen $i$, da die Urbilder abgeschlossener Mengen und der stetigen Funktion $f$ wieder abgeschlossen sind. Wegen
+			\begin{equation*}
+				\int_{\S} f \diffskip P
+				\overset{\text{Lin.}}{=}
+				\sum_{i=1}^k \int \one_{\menge{\frac{i-1}{k} \le f < \frac{i}{k}}} * f \diffskip P
+			\end{equation*}
+			folgt mit der Monotonie des Integrals und der Abschätzung des Integranten nach oben und unten mittels der Indikatorfunktion
+			\begin{equation} \label{eqProof1.4.2Plus}
+				\sum_{i=1}^k\underbrace{\frac{i-1}{k}}_{=\frac{i}{k}-\frac{1}{k}} *
+				P\brackets{\frac{i-1}{k} \le f < \frac{i}{k}}
+				\le \int f \diffskip P
+				\le \sum_{i=1}^k \frac{1}{k} * P \bigg( \underbrace{\frac{i-1}{k} \le f < \frac{i}{k}}_{F_{i-1} \setminus F_i} \bigg)
+				\satzende
+			\end{equation}
+			Die rechte Summe in \eqref{eqProof1.4.2Plus} ist gleich
+			\begin{align*}
+				&\frac{1}{k} * \sum_{i=1}^k i * \brackets{P(F_{i-1}) - P(F_i)}
+				\quad \text{da $F_i \subseteq F_{i-1}$}\\
+				&= \frac{1}{k} * \Big( P(F_0) - P(F_1) + P(F_1) - 2 * P(F_2) + 3 * P(F_2) - 3 * P(F_3) + \\
+				&\qquad + \dots + (k-1) * P(F_{k-2}) - (k-1) * P(F_{k-1}) + k * P(F_{k-1}) - k * P(F_k) \Big) \\
+				&= \frac{1}{k} * \Big( \underbrace{P(F_0)}_{=1} + P(F_1) + P(F_2) + \dots + P(F_{k-1}) - k * \underbrace{P(F_k)}_{=0} \Big) \quad (0 \le f < 1) \\
+				&= \frac{1}{k} + \frac{1}{k} * \sum_{i=1}^{k-1} P(F_i) 
+				\satzende
+			\end{align*}
+			Da die linke Summe in \eqref{eqProof1.4.2Plus} gleich der rechten Summe in \eqref{eqProof1.4.2Plus} minus $\frac{1}{k}$ ist, folgt
+			\begin{equation} \label{eqProof1.4.2DoppelSternchen}
+				\frac{1}{k} \sum_{i=1}^{k-1} P(F_i) 
+				\le \int f \diffskip P
+				\le \frac{1}{k} + \frac{1}{k} \sum_{i=1}^{k-1} P(F_i) 
+				\satzende
+			\end{equation}
+			Man beachte, dass \eqref{eqProof1.4.2DoppelSternchen} für \emph{jedes} Wahrscheinlichkeitsmaß $P$ gilt, also insbesondere auch für $P_n$.
+			Damit folgt
+			\begin{align*}
+				\limsup_{n \to \infty} \int f \diffskip P_n
+				\overset{\eqref{eqProof1.4.2DoppelSternchen}}&{\le}
+				\frac{1}{k} + \frac{1}{k} \sum_{i=1}^{k-1} \underbrace{ \limsup_{n \to \infty} P_n(F_i) }_{\overset{\ref{it:4.2ClosedSets}}{\le}P(F_i) ~ \forall i} \\
+				\overset{\ref{it:4.2ClosedSets}}&{\le} \frac{1}{k} + \underbrace{\frac{1}{k} \sum_{i=1}^{k-1} P(F_i)}_{\overset{\eqref{eqProof1.4.2DoppelSternchen}}{\le}\int f \diffskip P} \\
+				\overset{\eqref{eqProof1.4.2DoppelSternchen}}&{\le} \frac{1}{k} + \int f \diffskip P
+			\end{align*}
+			für alle $k \in \N$. Der Grenzübergang $k \to \infty$ liefert schließlich \eqref{eqProof1.4.2Sternchen}.
+			\item[Schritt 2:] Da $f \in C^b(\S)$ beliebig, gilt wegen Beschränktheit von $f$, dass $a,b \in \S$ existieren, sodass $a \le f < b$ gilt. Damit ist die Funktion 
+			\begin{equation*}
+				g(x) \defeq \frac{f(x) - a}{b - a}
+			\end{equation*}
+			stetig und es gilt $0 \le g < 1$. Mit dem Ergebnis von Schritt 1 erhalten wir
+			\begin{align*}
+				\limsup_{n \to \infty} \int f \diffskip P_n
+				&=\limsup_{n \to \infty} \int (b-a) * g + a \diffskip P_n\\
+				&=\limsup_{n \to \infty} \brackets{(b-a) * \int g \diffskip P_n + a} \\
+				&\le (b-a) * \underbrace{\limsup_{n \to \infty} \int g \diffskip P_n}_{\le \int g \diffskip P} + a \\
+				&\le (b-a) * \int g \diffskip P + a \\
+				\overset{\text{Lin.}}&=
+				\int f \diffskip P
+			\end{align*}
+		\end{description}
+		Damit ist \eqref{eqProof1.4.2Sternchen} gezeigt. Der Übergang zu $-f$ in \eqref{eqProof1.4.2Sternchen} liefert
+		\begin{align*}
+			\liminf_{n \to \infty} \int f \diffskip P_n
+			=\liminf_{n \to \infty} - \int -f\diffskip P_n 
+			&= - \limsup_{n \to \infty} \int \underbrace{-f}_{\in C^b(\S)} \diffskip P \\
+			\overset{\eqref{eqProof1.4.2Sternchen}}&{\ge}
+			-\int -f \diffskip P \\
+			\overset{\text{Lin.}}&=
+			\int f \diffskip P
+			\qquad \forall f \in C^b(\S) \satzende
+		\end{align*}
+		Daraus folgt nun 
+		\begin{equation*}
+			\int f \diffskip P \le \liminf_{n \to \infty} \int f \diffskip P_n \le \limsup_{n \to \infty} \int f \diffskip P_n \overset{\eqref{eqProof1.4.2Sternchen}}{\le} \int f \diffskip P \komma
+		\end{equation*}
+		was via $\lim_{n \to \infty} \int f \diffskip P_n = \int f \diffskip P$ für alle $f  \in C^b(S)$ nun \ref{it:4.2weakConv} impliziert.
+		%
+		\item[\ref{it:4.2ClosedSets} $ \Rightarrow $ \ref{it:4.2BorelSets}:]
+		Sei $B \in\B(\S)$ mit $P(\partial B) = 0$. Zunächst gilt
+		\begin{equation*}
+			0
+			= P(\overbrace{\partial B}^{\overline{B} \setminus \inner B})
+			= P(\overline{B}) - P(\inner B)
+			\Rightarrow 
+			P(\inner B)
+			\le P(B)
+			\le P(\overline{B}) 
+			= P(\inner B)
+			\satzende
+		\end{equation*}
+		Damit folgt dann durch
+		\begin{align*}
+			P(\overline{B})
+			\overset{\ref{it:4.2ClosedSets}}&{\ge}
+			\limsup_{n \to \infty} \underbrace{P_n(\overline{B})}_{\ge P_n(B)}
+			\ge \limsup_{n \to \infty} P_n(B)
+			\ge
+			\liminf_{n \to \infty} \underbrace{P_n(B)}_{ \ge P_n(\inner B) } \\
+			\overset{\ref{it:4.2ClosedSets} \Leftrightarrow \ref{it:4.2OpenSets}}&{\ge}
+			P\brackets{\inner B}
+			= P(\quer{B})
+			= P(B)
+		\end{align*}
+		die Gleichheit von Limes inferior und Limes superior und somit existiert der Grenzwert $\lim_{n \to \infty} P_n(B) = P(B)$.
+		%
+		\item[\ref{it:4.2BorelSets} $\Rightarrow$ \ref{it:4.2ClosedSets}:] 
+		Sei $F \in \F$ beliebig. Dann gilt für alle $\epsilon > 0$
+		\begin{equation}
+			\label{eqProof1.4.2SternchenUnten}
+			\partial \menge{ x \in \S : d(x,F) \le \epsilon} \subseteq \menge{ x \in \S : d(x,F)= \epsilon}
+		\end{equation}
+		denn: Sei $x \in \partial\menge{ x \in \S : d(x,F) \le \epsilon}$. Dann gilt mit der Charakterisierung des Abschlusses als Grenzwerte von Folgen einer Menge:
+		\begin{align*}
+			&\exists  (x_n)_{n \in \N} : \forall n \in \N : d(x_n,F) \le \epsilon \und \lim_{n \to \infty} x_n = x \komma \\
+			&\exists  (\zeta_n)_{n \in \N} :  \forall n \in \N : d(\zeta_n,F) > \epsilon \und  \lim_{n \to \infty} \zeta_n = x \satzende
+		\end{align*}
+		Da $d( * ,F)$ stetig ist gemäß \cref{lemma: 2.3} \ref{it: distStetig}, folgt
+		\begin{equation*}
+			 \epsilon \le \lim_{n \to \infty} d(\zeta_n, F) = d(x,F) = \lim_{n \to \infty} d(x_n, F) \le \epsilon \satzende
+		\end{equation*}
+		Wegen \eqref{eqProof1.4.2SternchenUnten} sind
+		\begin{align*}
+			A_\epsilon \defeq \partial \menge{ x \in \S : d(x,F) \le \epsilon} \qquad \forall \epsilon > 0
+		\end{align*}
+		paarweise disjunkt, da bereits die Obermengen paarweise disjunkt sind. Dann folgt
+		\begin{equation} \label{eqProof1.4.2DoppelSternchenUnten}
+			E \defeq \menge{ \epsilon>0 : P(A_\epsilon) > 0} \text{ ist höchstens abzählbar,}
+		\end{equation}
+		denn:
+		\begin{align*}
+			E = \bigcup_{m \in \N} \underbrace{\menge{ \epsilon > 0 : P(A_\epsilon) \ge \frac{1}{m}}}_{ \defqe E_m} \satzende
+		\end{align*}
+		Es gilt $\card{E_m} \le m$ --- Angenommen es existieren $0 < \epsilon_1 < \dots < \epsilon_{m+1}$ mit
+		\begin{equation*}
+		 	P(A_{\epsilon_i}) \ge \frac{1}{m} \quad (1 \le i \le m+1) 
+			\follows 
+		 	1 \ge P\left(\bigcupdot_{i=1}^{m+1} A_{\epsilon_i} \right)
+		 	= \sum_{i=1}^{m+1} \underbrace{ P\brackets{A_{\epsilon_i}}}_{\ge \frac{1}{m}} \ge (m+1) * \frac{1}{m} > 1
+		\end{equation*}
+		Das ist ein Widerspruch.
+		Damit ist $E$ abzählbare Vereinigung endlicher Mengen, also höchstens abzählbar unendlich.
+		Damit liegt das Komplement
+		\begin{align*}
+			E^\complement = \menge{\epsilon > 0 : P(A_\epsilon) = 0}
+		\end{align*}
+		dicht in $[0,\infty)$. (Dies kann man durch Widerspruch zeigen: angenommen es existiert ein $x \ge 0$ mit $x \notin \quer{E^\complement}$. Gemäß einer Übungsaufgabe existiert dann ein $r > 0$ mit $B(x,r) \cap E^\complement = \emptyset$, also mit $B(x,r) \subseteq \brackets{E^\complement}^\complement = E$. Da $B(x,r)$ überabzählbar ist, müsste auch $E$ überabzählbar sein, was eben nicht der Fall ist).
+		Daraus folgt insbesondere
+		\begin{align*}
+			\exists (\epsilon_k)_{k \in \N} \subseteq \R \mit \epsilon_k \downarrow 0 : \forall k \in \N : 
+			F_k \defeq \menge{ x \in \S : d(x,F) \le \epsilon_k} \text{ ist $P$-randlos.}
+		\end{align*}
+		Beachte $A_{\epsilon_k} = \partial F_k$. Wähle also $\epsilon_k  \in E^\complement$ für alle $k \in \N$. Da $F \subseteq F_k$ für alle $k \in \N$ ist, gilt:
+		\begin{equation*}
+			\limsup_{n \to \infty} P_n(F)
+			\le \limsup_{n \to \infty} \underbrace{P_n(F_k)}_{\text{konv.}}
+			\overset{\ref{it:4.2BorelSets}}{=}
+			P(F_k) \qquad \forall k \in \N
+		\end{equation*}
+		Für $k \to \infty$ folgt daraus $\limsup\limits_{n \to \infty} P_n(F) \le \lim_{k \to \infty} P(F_k) = P(F)$.
+		Die letzte Gleichheit gilt, weil $P$ $\sigma$-stetig von oben ist und $F_k \downarrow F$. Dies gilt, da $(\epsilon_k)$ monton fallend ist und somit $F_1 \supseteq F_2 \supseteq \dots$ gilt; sowie $\bigcap\limits_{k \in\N} F_k = F$, denn:
+		\begin{equation*}
+			x \in\bigcap_{k \in\N} F_k
+			\qquad \Leftrightarrow \qquad
+			x \in F_k \quad \forall k \in \N 
+			\qquad \Leftrightarrow \qquad 
+			d(x,F) \le \epsilon_k \quad \forall k \in \N 
+		\end{equation*}
+		Dies impliziert dann $d(x,F) = 0$, was wegen \cref{lemma: 2.3} äquivalent zu $x \in \overline{F} = F$ ist.
 	\end{description}
-
-%	\paragraph{Zeige \ref{it:4.2ClosedSets} $ \Rightarrow $ \ref{it:4.2weakConv}:}
-%	Sei $f \in C^b(\S)$ beliebig. Zeige zunächst:
-%	\begin{align}\label{eqProof1.4.2Sternchen}\tag{$\ast$}
-%		\limsup_{n \to \infty}\int f\diffskip \P_n\le\int f\diffskip \P
-%	\end{align}
-%	\subparagraph{1. Schritt:} Sei $0\le f<1$. Setze
-%	\begin{align*}
-%		F_i:=\set{ f\ge\frac{i}{k}}=\set{ x \in\S:f(x)\ge\frac{i}{k}}
-%		= f^{-1}\klammern{\intervallHO{\frac1k}{∞}},\qquad  \forall\; 0\le i\le k,\;k \in\N
-%	\end{align*}
-%	($F_i$ hängt auch von $k$ ab, aber diese Abhängigkeit wird in der Notation nicht
-%	demonstriert.)
-%	Dann gilt $F_i \in\F~ \forall i$, da $f$ stetig. Da
-%	\begin{align*}
-%		\int_{\S}f\diffskip \P
-%		\stackeq{\text{Lin}}
-%		\sum_{i=1}^k\int\indi_{\set{\frac{i-1}{k}\le f<\frac{i}{k}}}· f\diffskip \P
-%	\end{align*}
-%	folgt wegen Monotonie des Integrals
-%	\begin{align}\label{eqProof1.4.2Plus}\tag{+}
-%		\sum_{i=1}^k\underbrace{\frac{i-1}{k}}_{=\frac{i}{k}-\frac{1}{k}}·
-%	\P\klammern{\frac{i-1}{k}\le f<\frac{i}{k}}
-%		\le
-%		\int f\diffskip \P
-%		\le
-%		\sum_{i=1}^k \frac{1}{k}· \P\klammern[\Bigg]{\underbrace{\frac{i-1}{k}\le f<\frac{i}{k}}_{F_{i-1}\setminus F_i}}
-%	\end{align}
-%	Die rechte Summe in \eqref{eqProof1.4.2Plus} ist gleich
-%	\begin{align*}
-%		&\frac{1}{k}·\sum_{i=1}^k i·\klammern[\big]{ \P(F_{i-1})-\P(F_i)}
-%		\quad \text{da $F_i ⊂ F_{i-1}$}\\
-%		&=\frac{1}{k}·\Big(\P(F_0)-\P(F_1)+2· \P(F_1)-2· \P(F_2)+3· \P(F_2)-3· \P(F_3)+\\
-%		% CHECKED: '\Big' used.
-%		&\qquad+…+(k-1)· \P(F_{k-2})-(k-1)· \P(F_{k-1})+k· \P(F_{k-1})-k· \P(F_k)\Big)\\
-%		% CHECKED: '\Big' used.
-%		&=\frac{1}{k}·\klammern[\Big]{\underbrace{\P(F_0)}_{=1}+\P(F_1)+\P(F_2)+…+\P(F_{k-1})- k· \underbrace{\P(F_k)}_{=0}} \quad (0 \le f < 1)\\
-%		&=\frac{1}{k}+\frac{1}{k}·\sum_{i=1}^{k-1} \P(F_i)
-%	\end{align*}
-%	Da die linke Summe in \eqref{eqProof1.4.2Plus} gleich der rechten Summe in \eqref{eqProof1.4.2Plus} minus $\frac{1}{k}$ ist, folgt
-%	\begin{align}\label{eqProof1.4.2DoppelSternchen}\tag{$\ast\ast$}
-%		\sum_{i=1}^{k-1} \P(F_i)
-%		\le\int f\diffskip P
-%		\le\frac{1}{k}+\frac 1k \sum_{i=1}^{k-1} \P(F_i)
-%	\end{align}
-%	Beachte, \eqref{eqProof1.4.2DoppelSternchen} gilt für \emph{jedes} Wahrscheinlichkeitsmaß $\P$, also auch für $\P_n$.
-%	Damit folgt:
-%	\begin{align*}
-%		\limsup_{n \to \infty}\int f\diffskip \P_n
-%		\overset{\eqref{eqProof1.4.2DoppelSternchen}}&{\le}
-%		\frac{1}{k}+\frac 1k \sum_{i=1}^{k-1}\underbrace{
-%			\limsup_{n \to \infty} \P_n(F_i)
-%		}_{\overset{\ref{it:4.2ClosedSets}}{\le}\P(F_i)~ \forall i}\\
-%		\overset{\ref{it:4.2ClosedSets}}&{\le}
-%		\frac{1}{k}+\underbrace{\frac 1k \sum_{i=1}^{k-1} \P(F_i)}_{
-%			\overset{\eqref{eqProof1.4.2DoppelSternchen}}{\le}\int f\diffskip \P
-%		}\\
-%		\overset{\eqref{eqProof1.4.2DoppelSternchen}}&{\le}
-%		\frac{1}{k}+\int f\diffskip \P\qquad \forall k \in\N
-%	\end{align*}
-%	Grenzwertbildung $k \to \infty$ liefert \eqref{eqProof1.4.2Sternchen}.
-%	\paragraph{2. Schritt:} Da $f \in C^b(\S)$ beliebig, gilt wegen Beschränktheit von $f$:
-%	\begin{align*}
-%		∃ a<b:a\le f<b
-%		 \Rightarrow  g(x):=\frac{f(x)-a}{b-a}\text{ ist stetig und } 0\le g<1
-%	\end{align*}
-%	Daraus folgt
-%	\begin{align*}
-%		\limsup_{n \to \infty}\int f\diffskip \P_n
-%		&=\limsup_{n \to \infty}\int (b-a)· g+a\,\diffskip \P_n\\
-%		&=\limsup_{n \to \infty}\klammern{(b-a)·\int g\,\diffskip \P_n+a}\\
-%		&\le(b-a)·\underbrace{\limsup_{n \to \infty}\int g\diffskip \P_n}_{\le\int g\diffskip P\text{, wg.\ 1.\ Schritt}}+a\\
-%		&\le(b-a)·\int g\diffskip \P + a\\
-%		\overset{\text{Lin}}&=
-%		\int f\diffskip \P
-%	\end{align*}
-%	Damit ist \eqref{eqProof1.4.2Sternchen} gezeigt. Übergang zu $-f$ in \eqref{eqProof1.4.2Sternchen} liefert
-%	\begin{align*}
-%		\liminf_{n \to \infty}\int f\diffskip \P_n
-%		&=\liminf_{n \to \infty}-\int -f\diffskip \P_n\\
-%		&=-\limsup_{n \to \infty}\int \underbrace{-f}_{ \in C^b(\S)}\diffskip \P\\
-%		\overset{\eqref{eqProof1.4.2Sternchen}}&{\ge}
-%		-\int -f\diffskip \P\\
-%		\overset{\text{Lin}}&=
-%		\int f\diffskip \P
-%		\qquad \forall f \in C^b(\S)\\
-%		 \Rightarrow  \intf \diffskip\P &\le \liminf_{n → ∞} \intf\diffskip\P_n \le \limsup_{n → ∞} \intf\diffskip\P_n \overset{\eqref{eqProof1.4.2Sternchen}}{\le} \intf \diffskip\P \\
-%		 \Rightarrow  \lim_{n → ∞} \int f \diffskip\P_n &= \intf \diffskip\P \quad  \forall f  \in C^b(S) \\
-%		& \Rightarrow \ref{it:4.2weakConv}
-%	\end{align*}
-%
-%	\subparagraph{Zeige \ref{it:4.2ClosedSets} $ \Rightarrow $ \ref{it:4.2BorelSets}:}
-%	Sei $B \in\B(\S)\mit \P(\partial B)=0$. Dann gilt:
-%	\begin{align*}
-%		\P(\overline{B})
-%		\overset{\ref{it:4.2ClosedSets}}&{\ge}
-%		\limsup_{n \to \infty} \underbrace{\P_n(\overbrace{\overline{B}}^{⊇ B})}_{\ge \P_n(B)}
-%		\ge\limsup_{n \to \infty} \P_n(B)
-%		\overset{\text{stets}}{\ge}
-%		\liminf_{n \to \infty} \underbrace{\P_n(\overbrace{B}^{⊇\overset{∘}{B}})}_{
-%			\ge \P_n(\inner B)
-%		}\\
-%		\overset{\ref{it:4.2ClosedSets}⇔ \ref{it:4.2OpenSets}}&{\ge}
-%		\P\klammern[\big]{\inner B}
-%		=\P(\overline{B})
-%		=\P(B),
-%	\end{align*}
-%	denn:
-%	\begin{align*}
-%		0
-%		=\P(\overbrace{\partial B}^{\overline{B}\setminus \inner B})
-%		=\P(\overline{B})-\P(\inner B)
-%		 \Rightarrow 
-%		\P(\inner B)\le \P(B)\le \P(\overline{B})=\P(\inner B)
-%	\end{align*}
-%	Damit folgt $\liminf=\limsup$ und folglich $\lim_{n \to \infty} \P_n(B)=\P(B)$.
-%	\paragraph{Zeige \ref{it:4.2BorelSets} $ \Rightarrow $ \ref{it:4.2ClosedSets}:}
-%	Sei $F \in\F$ (abgeschlossen) beliebig. Dann gilt $ \forallε>0:$
-%	\begin{align}\label{eqProof1.4.2SternchenUnten}\tag{$\ast$}
-%		\partial\,\set{ x \in\S:d(x,F)\leε}
-%		⊆\set{ x \in\S:d(x,F)=ε}
-%	\end{align}
-%	denn: Sei $x \in\partial\set{ x \in\S:d(x,F)\leε}$. Dann gilt:
-%	\begin{align*}
-%		&∃ (x_n)_{n \in\N}: \forall n \in\N:d(x_n,F)\leε∧ \lim_{n \to \infty} x_n=x\\
-%		&∃ (ζ_n)_{n \in\N}: \forall n \in\N:d(ζ_n,F)>ε∧ \lim_{n \to \infty} ζ_n=x
-%	\end{align*}
-%	Da $d(·,F)$ stetig ist gemäß \ref{lemma2.3} \ref{it:distStetig}, folgt
-%	\begin{align*}
-%		ε \le \lim_{n → ∞} d(ζ_n, F) = d(x,F) = \lim_{n → ∞} d(x_n, F) \le ε.
-%	\end{align*}
-%	Wegen \eqref{eqProof1.4.2SternchenUnten} sind
-%	\begin{align*}
-%		A_ε:=\partial\set{ x \in\S:d(x,F)\leε}\qquad \forallε>0
-%	\end{align*}
-%	paarweise disjunkt, da bereits die Obermengen paarweise disjunkt sind. Dann folgt
-%	\begin{align}\label{eqProof1.4.2DoppelSternchenUnten}\tag{$\ast\ast$}
-%		E:=\set{ε>0:\P(A_ε)>0}\text{ ist höchstens abzählbar},
-%	\end{align}
-%	denn:
-%	\begin{align*}
-%		E=\Union_{m  \in \N} \underbrace{\set{ε>0: \P(A_ε) \ge \frac1m}}_{=:E_m}
-%	\end{align*}
-%	Wir möchten eine Obergrenze für die Größe der $E_m$ finden. Dafür beachte
-%	\begin{align*}
-%		1\ge \P\klammern{\Union_{ε  \in E_m} A_{ε}}
-%		\stackeq{\text{pw.\,disj.}}
-%		\sum_{ε  \in E_m}\underbrace{\P(A_{ε})}_{\ge\frac{1}{m}} \ge \abs{E_m}·\frac{1}{m}  \Rightarrow  \abs{E_m} \le m.
-%	\end{align*}
-%	% Fergers Variante:
-%	% Es gilt $\abs{E_m}\le m$, weil: Angenommen es existieren $0<ε_1<…<ε_{m+1}$ mit
-%	% % CHECKED: '|'
-%	% \begin{align*}
-%	% 	&\P(A_{ε_i})\ge\frac{1}{m}\qquad \forall 1\le i\le m+1\\
-%	% 	& \Rightarrow 
-%	% 	1\ge \P\left(\Union_{i=1}^{m+1} A_{ε_i}\right)
-%	% 	\stackeq{\text{pw. disj.}}
-%	% 	\sum_{i=1}^{m+1}\underbrace{\P\klammern[\big]{A_{ε_i}}}_{\ge\frac{1}{m}}\ge(m+1)·\frac{1}{m}>1
-%	% \end{align*}
-%	% Das ist ein Widerspruch.
-%	Damit ist $E$ abzählbare Vereinigung endlicher Mengen, also höchstens abzählbar unendlich.
-%	Damit liegt das Komplement
-%	\begin{align*}
-%		E^C=\set[\big]{ε>0: \P(A_ε)=0}
-%	\end{align*}
-%	dicht in $[0,∞)$.
-%	(Dies kann man durch Widerspruch zeigen: in $E$ kann kein Intervall positiver Länge enthalten sein, denn diese enthalten überabzählbar viele Elemente)
-%	Daraus folgt insbesondere:
-%	\begin{align*}
-%		∃(ε_k)_{k \in\N}⊆ℝ\mitε_k\diffskipownarrow0: \forall k \in\N:
-%		F_k:=\set[\big]{ x \in\S:d(x,F)\leε_k}\text{ ist $\P$-randlos}
-%	\end{align*}
-%	Beachte $A_{ε_k}=\partial F_k$. Wähle also $ε_k  \in E^C$ für alle $k  \in \N$. Da $F⊆ F_k~ \forall k \in\N$, gilt:
-%	\begin{align*}
-%		\limsup_{n \to \infty} \P_n(F)
-%		\le\limsup_{n \to \infty} \underbrace{\P_n(F_k)}_{\text{konv.}}
-%		\overset{\ref{it:4.2BorelSets}}&{=}
-%		\P(F_k)\qquad \forall k \in\N\\
-%		\overset{k \to \infty}{ \Rightarrow }
-%		\limsup_{n ⟶ ∞} \P_n(F)
-%		\le\lim_{k \to \infty} \P(F_k)
-%		&=\P(F)
-%	\end{align*}
-%	Die letzte Gleichheit gilt, weil $\P$ $σ$-stetig von oben ist und $F_k\diffskipownarrow F$.
-%	$F_k\diffskipownarrow F$, denn $F_1⊇ F_2⊇…$, da $ε_k$ monoton fallende Folge ist und
-%	\begin{align*}
-%		\bigcap_{k \in\N}F_k=F,
-%	\end{align*}
-%	denn:
-%	\begin{align*}
-%		x \in\bigcap_{k \in\N}F_k
-%		&⇔
-%		x \in F_k &  \forall k \in\N\\
-%		&⇔
-%		d(x,F)\leε_k &  \forall k \in\N\\
-%		& \Rightarrow 
-%		d(x,F)=0\\
-%		\overset{\ref{lemma2.3}~\ref{it:distCharakterisierung}}&{⇔}
-%		x \in \overline{F}\stackeq{F \in\F}F
-%		&& \qedhere
-%	\end{align*}
 \end{proof}
